<resources>
    <string name="app_name">Withme</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="로그인">로그인</string>
    <string name="forgot_password">forgot password</string>
    <string name="login">LOGIN</string>
    <string name="회원가입">회원가입</string>
    <string name="emailadress">EmailAdress</string>
    <string name="password">password</string>
    <string name="본인인증">본인인증</string>
    <string name="name">Name</string>
    <string name="여">여</string>
    <string name="남">남</string>
    <string name="성별">성별</string>
    <string name="nickname">Nickname</string>
    <string name="가입하기">가입하기</string>
    <string name="남성">남성</string>
    <string name="여성">여성</string>
    <string name="인증번호전송">인증번호전송</string>
    <string name="전화번호">전화번호</string>
    <string name="이름">이름</string>
    <string name="닉네임">닉네임</string>
    <string name="비밀번호">비밀번호</string>
    <string name="이메일주소">이메일주소</string>
    <string name="중복확인">중복확인</string>
    <string name="생년월일">생년월일(8자리)</string>
    <string name="인증번호">인증번호</string>
    <string name="tologinpage">toLoginPage</string>
    <string name="tomain">toMain</string>
    <string name="towriteaccompany">toWriteAccompany</string>
    <string name="동행글리스트">동행글리스트</string>
    <string name="_00_xx_xx_xx">00뮤지컬 xx월 xx일 xx시에 하는 뮤지컬 보러 가실 분 있나요?</string>
    <string name="dhdhshhs_388">dhdhshhs_388</string>
    <string name="xx_oo_n">오늘 XX시에 하는 OO전시회 가는데 같이 가서 \n구경 하실 분 있니요? 신청해주세요~!</string>
    <string name="oo">OO뮤지컬 동행 구해요!</string>
    <string name="dalee2008">dalee2008</string>
    <string name="oo00">오늘 oo전시회 같이 가실분?</string>
    <string name="heart">heart</string>
    <string name="xx">XX콘서트 막콘 동행 구해요!!</string>
    <string name="xx_n">xx콘 막콘 동행 구해요 콘서트 하기 전에 돌아다니면서 \n같이 나눔 받으실 분이면 더 좋을 것 같아요!!</string>
    <string name="isaiah_yeohs">isaiah_yeohs</string>
    <string name="동행신청하기">동행 신청하기</string>
    <string name="동행구하기">동행 구하기</string>
    <string name="제목">제목</string>
    <string name="내용을입력하세요">내용을 입력하세요</string>
    <string name="모집중">모집중</string>
    <string name="textview">TextView</string>
    <string name="oo000">저번 주에 한 OO 뮤지컬 본 사람?</string>
    <string name="태그">태그</string>
    <string name="_19">19시</string>
    <string name="xx_xx_xx">xx월 xx일 xx시</string>
    <string name="_19_oo_n">오늘 19시에 하는 OO전시회 가는데 같이 가서 구경 하실 분 있니요? \n신청해주세요~!</string>
    <string name="back">back</string>
</resources>